--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -13,15 +13,16 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                             </div>
-                            <form class="user">
+                            <form class="user" method="POST">
+                                {% csrf_token%}
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user"
+                                    <input type="text" class="form-control form-control-user"
                                         id="exampleInputEmail" aria-describedby="emailHelp"
-                                        placeholder="Enter Email Address...">
+                                        placeholder="Entrer votre nom d'utilisateur" name="username">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" class="form-control form-control-user"
-                                        id="exampleInputPassword" placeholder="Password">
+                                        id="exampleInputPassword" placeholder="Password" name="password">
                                 </div>
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox small">
@@ -30,9 +31,9 @@
                                             Me</label>
                                     </div>
                                 </div>
-                                <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
                                     Login
-                                </a>
+                                </button>
                                
                             </form>
                             <hr>
