--- a/templates/top_bar.html
+++ b/templates/top_bar.html
@@ -68,7 +68,7 @@
       >
       {% if request.user.is_authenticated %}
         <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-          >Douglas McGee</span
+          >@{{ user.username }}</span
         >
         <img
           class="img-profile rounded-circle"
