--- a/templates/top_bar.html
+++ b/templates/top_bar.html
@@ -1,124 +1,38 @@
-{% load static %}
-<!-- Topbar -->
-<nav
-  class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
->
-  <!-- Sidebar Toggle (Topbar) -->
-  <button
-    id="sidebarToggleTop"
-    class="btn btn-link d-md-none rounded-circle mr-3"
-  >
-    <i class="fa fa-bars"></i>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
   </button>
-
-  <!-- Topbar Navbar -->
-  <ul class="navbar-nav ml-auto">
-    <!-- Nav Item - Alerts -->
-    <li class="nav-item dropdown no-arrow mx-1">
-      <a
-        class="nav-link dropdown-toggle"
-        href="#"
-        id="alertsDropdown"
-        role="button"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        <i class="fas fa-bell fa-fw"></i>
-        <!-- Counter - Alerts -->
-        <span class="badge badge-danger badge-counter">3+</span>
-      </a>
-      <!-- Dropdown - Alerts -->
-      <div
-        class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-        aria-labelledby="alertsDropdown"
-      >
-        <h6 class="dropdown-header">Alerts Center</h6>
-        <a class="dropdown-item d-flex align-items-center" href="#">
-          <div class="mr-3">
-            <div class="icon-circle bg-primary">
-              <i class="fas fa-file-alt text-white"></i>
-            </div>
-          </div>
-          <div>
-            <div class="small text-gray-500">December 12, 2019</div>
-            <span class="font-weight-bold"
-              >A new monthly report is ready to download!</span
-            >
-          </div>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'trade' %}">Trade</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {% if request.user.is_authenticated %}
+            {{ user.username }}
+          {% else %}
+            Login or Register
+          {% endif %}
         </a>
-        <a class="dropdown-item text-center small text-gray-500" href="#"
-          >Show All Alerts</a
-        >
-      </div>
-    </li>
-
-    <div class="topbar-divider d-none d-sm-block"></div>
-
-    <!-- Nav Item - User Information -->
-    <li class="nav-item dropdown no-arrow">
-      <a
-        class="nav-link dropdown-toggle"
-        href="#"
-        id="userDropdown"
-        role="button"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-      {% if request.user.is_authenticated %}
-        <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-          >@{{ user.username }}</span
-        >
-        <img
-          class="img-profile rounded-circle"
-          src="{% static 'img/undraw_profile.svg' %}"
-        />
-      {% else%}
-      <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-      >Login or Register</span>
-      {% endif %}
-      </a>
-      <!-- Dropdown - User Information -->
-      <div
-        class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-        aria-labelledby="userDropdown"
-      >
-      {% if request.user.is_authenticated %}
-        <a class="dropdown-item" href="#">
-          <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-          Profile
-        </a>
-        <a class="dropdown-item" href="#">
-          <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-          Settings
-        </a>
-        <a class="dropdown-item" href="#">
-          <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-          Activity Log
-        </a>
-        <div class="dropdown-divider"></div>
-        <a
-          class="dropdown-item"
-          href="{% url 'logout' %}"
-          data-toggle="modal"
-          data-target="#logoutModal"
-        >
-          <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-          Logout
-        </a>
-        {% else %}
-        <a class="dropdown-item" href="{% url 'login'%}">
-          <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-          Loging
-        </a>
-        <a class="dropdown-item" href="{% url 'register' %}">
-          <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-          Register
-        </a>
-        {% endif%}
-      </div>
-    </li>
-  </ul>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+          {% if request.user.is_authenticated %}
+            <a class="dropdown-item" href="#">Profile</a>
+            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">Activity Log</a>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+          {% else %}
+            <a class="dropdown-item" href="{% url 'login'%}">Login</a>
+            <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+          {% endif %}
+        </div>
+      </li>
+    </ul>
+  </div>
 </nav>
-<!-- End of Topbar -->
