Save before updating chart

--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -20,7 +20,7 @@
     {% include 'top_bar.html'%}      
         <!-- Page Content-->
         <section class="pt-4">
-            <div class="container px-lg-5">
+            <div class="container-fluid px-lg-5">
                 
                 {% block content %}
                         
